# ResponsiveGen

./: .env.example  .gitignore  Architecture.md  DEVELOPMENT.md  EVALUATION_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  ORCHESTRATION_COMPLETE.md  ORCHESTRATION_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  cli.py  environment.yml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml
data/: README.md
data/eval/: .gitkeep
data/examples/: .gitkeep
data/ground_truth/: .gitkeep
examples/: .gitkeep
responsive_gen/: __init__.py  models.py
responsive_gen/evaluation/: __init__.py  html_utils.py  layout_metrics.py  layout_similarity.py  llm_judge.py  responsive_meter.py
responsive_gen/io/: __init__.py  sketch_loader.py
responsive_gen/orchestration/: README.md  __init__.py  agents.py  graph.py  state.py  tools.py  utils.py
responsive_gen/pipeline/: __init__.py  generation.py
responsive_gen/rendering/: __init__.py  html_renderer.py
responsive_gen/utils/: __init__.py  llm_logger.py
tests/: __init__.py  test_models.py  test_sketch_loader.py
